--- a/pkg/codegen/apis/data/routes.yaml
+++ b/pkg/codegen/apis/data/routes.yaml
@@ -8,6 +8,7 @@ paths:
   /seasons:
     get:
       summary: Get all seasons
+      operationId: getSeasons
       parameters:
         - $ref: '../common/common.yaml#/components/parameters/limit_param'
         - $ref: '../common/common.yaml#/components/parameters/last_value'
@@ -48,6 +49,7 @@ paths:
   /seasons/{year}/races:
     get:
       summary: Get all races for a season
+      operationId: getSeasonRaces
       parameters:
         - $ref: '../common/common.yaml#/components/parameters/limit_param'
         - $ref: '../common/common.yaml#/components/parameters/last_value'
@@ -72,6 +74,45 @@ paths:
                 $ref: '../common/common.yaml#/components/schemas/error_message'
         '404':
           description: No races found
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/message'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/error_message'
+
+  /races/{race_id}/results:
+    get:
+      summary: Get all results for a season
+      operationId: getRaceResults
+      parameters:
+        - $ref: '../common/common.yaml#/components/parameters/limit_param'
+        - $ref: '../common/common.yaml#/components/parameters/last_value'
+        - $ref: '../common/common.yaml#/components/parameters/last_id'
+        - $ref: '../common/common.yaml#/components/parameters/sort_by'
+        - $ref: '../common/common.yaml#/components/parameters/sort_direction'
+        - $ref: '#/components/parameters/path_race_id'
+      responses:
+        '200':
+          description: A list of all results for the specified season
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/race_result'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/error_message'
+        '404':
+          description: No results found
           content:
             application/json:
               schema:
@@ -117,6 +158,14 @@ components:
       schema:
         type: integer
         format: int64
+    path_race_id:
+      name: race_id
+      in: path
+      description: The ID of the race
+      required: true
+      schema:
+        type: integer
+        format: int64
 
   schemas:
     season:
@@ -140,3 +189,27 @@ components:
         date:
           type: string
           format: date
+
+    race_result:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        position:
+          type: string
+        driver_number:
+          type: integer
+          format: int64
+        driver_name:
+          type: string
+        team_name:
+          type: string
+        laps_completed:
+          type: integer
+          format: int64
+        time_or_retired:
+          type: string
+        points:
+          type: integer
+          format: int64
