--- a/pkg/codegen/apis/data/routes.yaml
+++ b/pkg/codegen/apis/data/routes.yaml
@@ -128,6 +128,88 @@ paths:
               schema:
                 $ref: '../common/common.yaml#/components/schemas/error_message'
 
+  /championships/{year}/drivers:
+    get:
+      summary: Get all drivers for a season
+      operationId: getDriversChampionship
+      parameters:
+        - $ref: '../common/common.yaml#/components/parameters/limit_param'
+        - $ref: '../common/common.yaml#/components/parameters/last_value'
+        - $ref: '../common/common.yaml#/components/parameters/last_id'
+        - $ref: '../common/common.yaml#/components/parameters/sort_by'
+        - $ref: '../common/common.yaml#/components/parameters/sort_direction'
+        - $ref: '#/components/parameters/path_year'
+        - $ref: '#/components/parameters/query_name'
+        - $ref: '#/components/parameters/query_tag'
+        - $ref: '#/components/parameters/query_team'
+      responses:
+        '200':
+          description: A list of all drivers for the specified season
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/driver'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/error_message'
+        '404':
+          description: No drivers found
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/message'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/error_message'
+
+  /championships/{year}/constructors:
+    get:
+      summary: Get all drivers for a season
+      operationId: getConstructorsChampionship
+      parameters:
+        - $ref: '../common/common.yaml#/components/parameters/limit_param'
+        - $ref: '../common/common.yaml#/components/parameters/last_value'
+        - $ref: '../common/common.yaml#/components/parameters/last_id'
+        - $ref: '../common/common.yaml#/components/parameters/sort_by'
+        - $ref: '../common/common.yaml#/components/parameters/sort_direction'
+        - $ref: '#/components/parameters/path_year'
+        - $ref: '#/components/parameters/query_name'
+      responses:
+        '200':
+          description: A list of all drivers for the specified season
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/constructor'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/error_message'
+        '404':
+          description: No drivers found
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/message'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '../common/common.yaml#/components/schemas/error_message'
+
 components:
   parameters:
     query_year:
@@ -154,6 +236,27 @@ components:
       schema:
         type: integer
         format: int64
+    query_name:
+      name: name
+      in: query
+      description: The name to filter by
+      required: false
+      schema:
+        type: string
+    query_tag:
+      name: tag
+      in: query
+      description: The tag to filter by
+      required: false
+      schema:
+        type: string
+    query_team:
+      name: team
+      in: query
+      description: The team to filter by
+      required: false
+      schema:
+        type: string
     path_year:
       name: year
       in: path
@@ -207,6 +310,8 @@ components:
           format: int64
         driver_name:
           type: string
+        driver_tag:
+          type: string
         team_name:
           type: string
         laps_completed:
@@ -215,5 +320,38 @@ components:
         time_or_retired:
           type: string
         points:
+          type: number
+
+    driver:
+      type: object
+      properties:
+        id:
           type: integer
           format: int64
+        position:
+          type: integer
+          format: int64
+        name:
+          type: string
+        tag:
+          type: string
+        nationality:
+          type: string
+        team:
+          type: string
+        points:
+          type: number
+
+    constructor:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        position:
+          type: integer
+          format: int64
+        name:
+          type: string
+        points:
+          type: number
