Only deploying the docs when the data api is deployed

--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Docs
         # Only run on the main branch
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/main' && inputs.app == 'data' }}
         shell: bash
         run: |
           curl -L \
