--- a/.github/workflows/ci-code-approval.yml
+++ b/.github/workflows/ci-code-approval.yml
@@ -84,6 +84,8 @@ jobs:
           ./openapi-lint.sh > openapi-lint.json
 
       - name: Upload the report
+        # Run this step on all PR's even if the linting fails
+        if: ${{ always() && github.event_name == 'pull_request' }}
         uses: thollander/actions-comment-pull-request@v2
         with:
           # Full file path to the plan output
