--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -14,6 +14,7 @@ on:
         type: environment
         default: 'prod-1'
         options:
+          - 'dev-1'
           - 'prod-1'
       app:
         description: 'App to deploy'
