--- a/.github/workflows/ci-code-approval.yml
+++ b/.github/workflows/ci-code-approval.yml
@@ -153,3 +153,9 @@ jobs:
         uses: tj-actions/changed-files@v45
         with:
           since_last_remote_commit: true
+
+      - name: "Fail if code generation changes files"
+        if: steps.changed-files.outputs.files != ''
+        run: |
+          echo "Code generation changes files. Please run 'make codegen' and commit the changes."
+          exit 1
